Tue Aug 22 17:10:39 2000  Ezra Peisach  <epeisach@mit.edu>

	* secure.h (myaddr): For secure data stream, pass the port number
 	of the data stream and not the control stream to krb_mk_priv.

2000-08-17  Ezra Peisach  <epeisach@mit.edu>

	* domacro.c: Compiler warning cleanups and fix the overflow fix to
	index the proper array.

	* cmds.c, cmdtab.c, ftp.c, ftp_var.h, getpass.c, glob.c, main.c,
	radix.c, ruserpass.c, secure.c, secure.h: Compiler warning
	cleanups including providing prototypes, cleanup of assignments in
	conditionals, including unistd.h and stdlib.h (if present),
	declaring local functions as static.

	* Makefile.in: Do not compile pclose.c - the code is not used. 

2000-05-11  Nalin Dahyabhai  <nalin@redhat.com>

	* domacro.c (domacro): Don't overflow "line2"
	* ftp.c (getreply, krb4 compat): Bail if message data too big for buffer
	(getreply, gssapi): Ditto.
	(pswitch): Don't overflow "ntin", "ntout", "mapin", "mapout".
	(do_auth, krb4 compat): Don't overflow "realm".

2000-04-27  Nalin Dahyabhai  <nalin@redhat.com>

	* cmds.c (remglob): Don't overflow buffer "temp".
	(shell): Don't overflow buffer "shellnam".
	(quote1): "buf"
	* glob.c (ftpglob): Fix boundary in buffer "agpath".
	(expand): Don't overflow buffer pointed to by "gpath".
	(execbrc): Don't overflow buffer "restbuf".

2000-02-18  Ken Raeburn  <raeburn@mit.edu>

	* cmds.c (mls): Declare some variables volatile to protect against
	getting clobbered by setjmp/longjmp.
	* ftp.c (sendrequest, recvrequest, proxtrans): Ditto.
	* main.c (main): Ditto.
	* pclose.c (mypopen): Ditto.

1999-10-26  Wilfredo Sanchez  <tritan@mit.edu>

	* Makefile.in: Clean up usage of CFLAGS, CPPFLAGS, DEFS, DEFINES,
	LOCAL_INCLUDES such that one can override CFLAGS from the command
	line without losing CPP search patchs and defines. Some associated
	Makefile cleanup.

1999-09-21  Ken Raeburn  <raeburn@mit.edu>

	* ftp.c (getreply): Don't declare strpbrk or strstr functions if
	they're defined as macros.
