@@ -1,3 +1,10 @@
+2000-08-29  Alexandra Ellwood  <lxs@mit.edu>
+
+        * cmds.c, cmdtab.c, ftp_var.h: renamed getmode() and setmode()
+	to get_mode() and set_mode() to avoid a collision with Mac OS X
+	file permission bits manipulation functions of the same name
+	which get included through unistd.h.
+
 Tue Aug 22 17:10:39 2000  Ezra Peisach  <epeisach@mit.edu>
 
 	* secure.h (myaddr): For secure data stream, pass the port number
